--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <vertx.version>4.3.1</vertx.version>
         <gson.version>2.9.0</gson.version>
         <lombok.version>1.18.24</lombok.version>
+        <disruptor.version>3.4.4</disruptor.version>
         <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -31,7 +32,11 @@
             <artifactId>vertx-web</artifactId>
             <version>${vertx.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>${disruptor.version}</version>
+        </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-web-client</artifactId>
